--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    block header
     block content
+    block footer
+    script(type='text/javascript' src='https://code.jquery.com/jquery-3.2.1.min.js')
+    script(type='text/javascript' src='/javascripts/script.js')
