Converted Megan's HTML into Pug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,8 +2,13 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+	meta(charset='UTF-8')
+	meta(name='viewport', content='width=device-width, initial-scale=1')
+	link(rel='stylesheet', href='https://www.w3schools.com/w3css/4/w3.css')
+	link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Raleway')
+	link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+	link(rel='stylesheet', href='/stylesheets/style.css')
+  body.w3-content.w3-border-left.w3-border-right
     block header
     block content
     block footer
