--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,17 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", Arial, Helvetica, Sans-Serif
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Raleway", Arial, Helvetica, Sans-Serif
 }
 
 a {
   color: #00B7FF;
+}
+
+.mySlides {
+  display:none
 }
