--- a/views/index.pug
+++ b/views/index.pug
@@ -100,30 +100,30 @@ block content
     #apartment.w3-container
     h2.w3-text-blue Randomized Workout Routine
     .w3-display-container.mySlides
-      img(src='Bench-dips-1.png', style='width:100%;margin-bottom:-6px')
+      img(src='/images/Bench-dips-1.png', style='width:100%;margin-bottom:-6px')
       .w3-display-bottomleft.w3-container.w3-black
       p Exercise 1
     .w3-display-container.mySlides
-      img(src='Bench-dips-1.png', style='width:100%;margin-bottom:-6px')
+      img(src='/images/Bench-dips-1.png', style='width:100%;margin-bottom:-6px')
       .w3-display-bottomleft.w3-container.w3-black
       p Exercise 2
     .w3-display-container.mySlides
-      img(src='Bench-dips-1.png', style='width:100%;margin-bottom:-6px')
+      img(src='/images/Bench-dips-1.png', style='width:100%;margin-bottom:-6px')
       .w3-display-bottomleft.w3-container.w3-black
       p Exercise 3
     .w3-display-container.mySlides
-      img(src='Bench-dips-1.png', style='width:100%;margin-bottom:-6px')
+      img(src='/images/Bench-dips-1.png', style='width:100%;margin-bottom:-6px')
       .w3-display-bottomleft.w3-container.w3-black
       p Exercise 4
     .w3-row-padding.w3-section
     .w3-col.s3
-      img.demo.w3-opacity.w3-hover-opacity-off(src='Bench-dips-1.png', style='width:100%;cursor:pointer', onclick='currentDiv(1)', title='Exercise 1')
+      img.demo.w3-opacity.w3-hover-opacity-off(src='/images/Bench-dips-1.png', style='width:100%;cursor:pointer', onclick='currentDiv(1)', title='Exercise 1')
     .w3-col.s3
-      img.demo.w3-opacity.w3-hover-opacity-off(src='Bench-dips-1.png', style='width:100%;cursor:pointer', onclick='currentDiv(2)', title='Exercise 2')
+      img.demo.w3-opacity.w3-hover-opacity-off(src='/images/Bench-dips-1.png', style='width:100%;cursor:pointer', onclick='currentDiv(2)', title='Exercise 2')
     .w3-col.s3
-      img.demo.w3-opacity.w3-hover-opacity-off(src='Bench-dips-1.png', style='width:100%;cursor:pointer', onclick='currentDiv(3)', title='Exercise 3')
+      img.demo.w3-opacity.w3-hover-opacity-off(src='/images/Bench-dips-1.png', style='width:100%;cursor:pointer', onclick='currentDiv(3)', title='Exercise 3')
     .w3-col.s3
-      img.demo.w3-opacity.w3-hover-opacity-off(src='Bench-dips-1.png', style='width:100%;cursor:pointer', onclick='currentDiv(4)', title='Exercise 4')
+      img.demo.w3-opacity.w3-hover-opacity-off(src='/images/Bench-dips-1.png', style='width:100%;cursor:pointer', onclick='currentDiv(4)', title='Exercise 4')
     .w3-container
     h4
       strong Muscle Group
